--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -92,6 +92,7 @@ bSkipMovies=False
 +IniSectionBlacklist=HordeStorageServers
 +MapsToCook=(FilePath="/Game/Map/MainLevel")
 +MapsToCook=(FilePath="/Game/Map/MainMenu")
++MapsToCook=(FilePath="/Game/Map/TheEnd")
 PerPlatformBuildConfig=(("Windows", PPBC_Development))
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
